# icecube_data_reader

./: LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: conf.py  index.rst
icecube_data_reader/: downloader.py  event_types.py  events.py  lifetime.py
icecube_data_reader/irf/: effective_area.py  irf.py
icecube_data_reader/utils/: utils.py
tests/: test_aeff.py  test_downloader.py  test_events.py  test_irf.py  test_lifetime.py  test_refrigerator.py
