[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "icecube_data_reader"
description = "A suite of classes to read IceCube track data"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Julian Kuhlmann", email = "julian.kuhlmann@tum.de"},
]
maintainers = [
    {name = "Julian Kuhlmann", email = "julian.kuhlmann@tum.de"},
]
license = "MIT"
license-files = ["LICENSE.txt"]

dependencies = [
    "numpy",
    "astropy",
    "scipy",
    "tqdm",
    "requests",
    "requests_cache",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov"
]
docs = [
    "sphinx",
    "nbsphinx"
]

[project.urls]
Repository = "https://github.com/nu-isance/icecube_data_reader"
Issues = "https://github.com/nu-isance/icecube_data_reader/issues"

[tools.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "icecube_data_reader/_version.py"
versionfile_build = "icecube_data_reader/_version.py"
tag_prefix = "v"
parentdir_prefix = "icecube_data_reader-"
